--- a/11-21-24.md
+++ b/11-21-24.md
@@ -3,12 +3,153 @@
 [//]: <> (use `gqap` to force wrap text)
 [//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 22 - November 21, 2024 -
+# Lecture 22 - November 21, 2024 - Architecture and Diplomacy in the Imperial Capital
 
-## Lecture Outline
+### Lecture Outline
 
-###
+#### 1. **Building a Modern Capital**
 
-#### 1.
+- Remember that state Edo was in after the Meiji Restoration; population decreased + many of the
+  wealthy had left
+- re-reached 1 million people by 1880s
+- transitions from the Tokugawa period into the Meiji period brought a lot of foreigners
+- Tsukiji Foreign Settlement and the “Hoteru-kan”
 
-### Key Terms
+  - under the treaties signed by the Bakufu, the city of Edo was one of the places that was opened
+    up for foreign residents (citizens/subjects of the treaty powers)
+  - bakufu began building special foreign concession at Tsukiji (completed in 1869)
+  - Afterwards, this was the place where foreigners were required to live
+  - Consulates, HQs for foreign companies, and missionaries (who set up schools)
+    - this draws many ambitions men (and women) to the mission schools, which eventually become many
+      of the elite private schools in Japan
+    - missionaries also built hospitals (now St. Luke's International Hospital)
+  - foreigns are confined here to protect them from shi-shi type men, but to also prevent/limit
+    unregulated kinds of mixing; from the outset, there is concern that good Japanese women from good
+    families might have contact with western men, which would lead to a lot of unpleasentness
+    - as such, the Meiji government built a red light district, where "bad" Japanese women could
+      service the needs of these western men
+    - red light district doesnt work well in Tokyo, as many of the men were missionaries
+  - also first location of Japan's first hotel; building becomes a celebrated landmark
+    - Tsukuji Hoteru-kan (i.e. Hotel-hotel)
+    - used traditional Japanese building techniques to build what the Japanese thought was a western
+      building
+    - burned to the ground in 1872, as part of a large fire; significant b/c it opens up a large
+      central part of the city for redevelopment
+
+- Meiji government issues a new plan to rebuild this part of the city with a new technology to
+  Japan (the brick) (architect: Thomas Waters), which becomes the Ginza district
+
+  - gets its start as the place to go; becomes synonymous with the city of Tokyo
+  - takes a while b/c people did not know how to fire bricks; so Waters had to teach them/set up the
+    brick firing infrastructure
+  - remember, the government at this point was struggling to pay its bills; so why did it embark on
+    such an ambitious architectural project
+    - the Japanese leaders were interested in fire proofing a city that was been historically prone
+      to fires
+    - also, the government was interested in creating a new kind of city that would be a showcase
+      the new Japan; convince the western powers that Japan should treated as an equal/civilized
+      country
+      - no coincidence that the first train station was built very close to the Ginza district (by
+      1876.
+
+- but many people were not enamored by the new Ginza district, so it was originally vacant; but over
+  time, it became the place to hangout (known as Ginbura)
+- New Forms of Transport: The Rickshaw and Trolleys
+  - the rickshaw (spreading from Japan to other parts of Asia) is invented in Tokyo, and by the
+    1870s, there were already 50,000 in Tokyo
+  - if you moved into the city as a man, you could make a living pulling a rickshaw
+  - part of the process that starts to lead to the recovery of the city's population
+  - beginning of a revolution for urban transportation
+- old daimyo's palace was confiscated and turned in the ministy of foreign afairs HQ
+- Meiji Monuments: The First National Bank and the Twelve Storey Tower
+  - established and becomes famous as a landmark in the 1870s
+  - Ryounkaku Tower; first building in the country with an elevator; could go up to the 12th floor
+    and look out onto the city by the end of the 1880s
+- A New Palace
+  - build for the emperor
+  - founded as a castle town (with shogun's castle at the center of the city), but the main tower
+    burned down so it lost its prominence
+  - when the emperor moved to Tokyo, he moved into the old daimyo's palace, which was burned down in
+    1873
+  - in the early 1880s, people like Fukuzawa Yukichi began to argue that the emperor
+    should have a new palace, suitable for the westernizing monarch
+    - work began in 1884, and was completed in 1888, just in time for the promulgation of the Meiji
+      constitution
+  - new palace was intended to serve as a focal point
+  - in addition to the buildings, a new plaza was created outside the palance to allow for crowds to
+    celebrate ceremonies and occasions on the footsteps of the emperor
+  - has a strong western (particularly German) influence
+  - Rokumeikan "Deer Cry Pavillion"
+    - intended to be a place where men and women could meet for grand social occasions
+    - basically a large ballroom/party house
+    - brainchild of Inoue Kaoru
+
+#### 2. **Architecture and Diplomacy: Treaty Revision and the Rokumeikan**
+
+- Inoue Kaoru as Foreign Minister
+  - from Choshu, send abroad to study
+  - as foreign minister in the 1880s, he was responsible for negotiating the revision of the
+    treaties
+  - decides it was critical to have a location where westerners could socialize with elite Japanese
+    and get a sense at how the Japanese had progressed
+- Rokumeikan Diplomacy and its Perception
+  - couples could dance in a western style
+  - this did not always work as well as hoped; Japanese were still seen as backward by westerners
+  - for a time, Inoue's plan seemed to be working
+
+#### 3. **Mixing Things Up**
+
+- The Plan for “mixed courts” and its Failure
+  - foreign merchants + business people were forced to rely on Japanese middlemen to get access to
+    the interior of the country; as such, westerners were interested in opening up the middle of the
+    county without having to give up their other privileges
+  - after 6 years of tough negotions, in 1866, Inoue was able to get the western powers to give up
+    their extraterritorial rights in Japan, the entire country was opened up to foreigners, and they
+    would gain access to Japanese merchants in the interior; in return, Japan would create new, mixed
+    courts to have primary jurisdiction on any case involving a foreigner
+    - Japanese judges sitting alongside foreign judges; idea was developed by the British in Egypt
+    - but as soon as word starts to spread that this was being considered, many people come out in
+      opposition
+      - one was Gustave Emile Boissonade, who was a French legal advisor to the Japanese government
+      - once you let foreigners have the toehold in the legal system, it would increasingly
+        difficult to have it removed
+      - when ordinary people get this possibility and the contents of Inuoe's plan are leaked, there
+        was massive opposition
+    - Inoue was then forced to pause talks with the west and resign from his position
+- Okuma Shigenobu becomes new Foreign minister
+  - opens up new round of treaty negotiations in 1888
+  - removes more objectionable parts of Inoue's plan, but still wants to explore the idea of mixed
+    courts
+  - it is leaked again and there is massive opposition
+  - men of spirit attempt to bomb him, but he survives, losing a leg
+  - decides to step down
+- Mutsu Munemitsu as Foreign Minister in 1892
+  - government was under a lot of pressure from hardliners in the new Diet and from the public on
+    the question of treaty revision
+  - in a reversal of drive to treaty revision, the public were convinced that the existing treaty
+    port system was not that bad of a deal, as it was restricting the foreigners to the small parts of
+    land
+- Public anxiety about “mixed residence” with foreigners
+  - "what would happen if white people and japanese people started having children?"
+  - played up by party politicians in the Diet
+- Achieving Treaty Revision: Anglo-Japanese Commercial Treaty 1894
+  - existing of pressures + outpouring of public sentiment led the Japanese government to move fast
+  - uses pressures to force the western powers to drop the idea of extraterritoriality; must accept
+    the reformed Japanese legal system
+  - British were also keen to secure an ally in the Pacific, and british agree to a new treaty (just
+    on the even of the Sino-Japanese war)
+    - phased in gradually, but now was an equal treaty
+
+### Terms:
+
+- Tsukiji “Hoterukan”
+- “Ginbura” – Hanging out in the Ginza
+- Rickshaw – rikisha or jinrikisha
+- The “Twelve Storey Tower” of Asakusa
+- Rokumeikan (lit. “Deer Cry Pavilion”)
+- Inoue Kaoru (1835-1915; Chōshū)
+- “Mixed courts”
+- Ōkuma Shigenobu
+- Mutsu Munemitsu (1844-1897)
+- “Mixed residence”
+- Anglo-Japanese Commercial Treaty 1894
