--- a/12-03-24.md
+++ b/12-03-24.md
@@ -3,12 +3,152 @@
 [//]: <> (use `gqap` to force wrap text)
 [//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 23 - December 3, 2024 -
+# Lecture 23 - December 3, 2024 - The Russo-Japanese War
 
-## Lecture Outline
+### Lecture Outline
 
-###
+#### 1. **Treaty Revision**
 
-#### 1.
+- Another indicator of Japan’s rising fortunes
+- Challenge of the Triple Intervention
+  - involved Russia, Germany, and France saying that they did not like Japan having major control
+    over Asia, and force Japan to hand back some of their territorial gains that they won from war
+    (the Liaodong Peninsula)
+  - but just as the gave it up, the Russians took over the peninsula and the Germans, now pretty
+    keen to catch up to their European allies, claimed the Shandong Peninsula
+  - very annoying to people in Japan, but the implications were greater than just national pride;
+    the strategic implications were significant; now Japan's influence over Korea was very unsure;
+  - Japan now had two major European powers right on its doorstep
+  - rather than easing their position in the world, the years after the Sino-Japanese war led to a
+    wretching up of foreign anxiety
+- The Kabo (or Gabo) Reforms
+  - Korean reformers (who were often sympathetic to Japan) felt a sense of urgency of the foreign
+    powers around the Korean borders
+  - tried to modernize Korea at a much faster rate, and tried to dismantle Korea overnight
+  - but after the Triple intervention, Korea looked very weak and vulnerable, so the reformers were
+    pushed back by the conservative faction (Korean King Kojong and Queen Min)
+    - some military leaders decide to take matters into their own hands, and decide to take the
+      queen hostage and execute her
+  - But polarized Korea even more, and is still a contentious issue in Korean-Japanese relations
+  - assassination leads to the kind to seek refuge in the Russian Legation
 
-### Key Terms
+#### 2. **New Rivalries in Korea and Manchuria**
+
+- Korean Resistance to Japan after the Sino-Japanese War
+  - Russia’s Growing Influence
+  - King Kojong and the Russian Legation
+    - flees to the Russian embassy in Seoul with russian backing
+  - Japanese decide to just negotiate directly with the Russians over Korea
+  - Trans-Siberian Railway
+  - Czar Nicholas II decides to build a railway from Moscow to Vladivostok, to link Europe and
+    Siberia/Asia
+    - Japanese see this as a direct threat to their interests in Korea
+- Japan’s Response
+  - Ito was prime minister, and his plan was to negotiate with the Russians and exchange Manchuria
+    for Korea
+  - The Boxer Rebellion
+    - group of anti-foreign Chinese, who were against the foreign powers in China, rise up and kill
+      many foreigners in China
+    - attacks that they lead were publized throughout the west and Japan sides with the west,
+      playing a significant role in quelling the uprising and coming to the rescue of white europeans
+    - Russia takes advantage of this momement to move more troops into Manchuria
+      - after the rebellion is over, Russia does not withdraw their troops
+      - also reject the request to exchange Manchuria for Korea
+  - Yamagata: Anglo-Japanese Alliance (1902) and Militarization
+    - Yamagata was a military leader, and he was very much against the idea of negotiating with the
+      Russians
+    - form a stronger alliance with the British (who were the primary Russian rival at the time)
+    - also wanted to further strengthen the military
+    - by 1897, 59% of the national budget was going to the military (creating additional elements in
+      the army and building up the navy)
+    - In 1903, Japanese leadership was not confident that they had a chance to defeat the Russians;
+      decide to buy themselves more time and open up another round of negotiations with the
+      Russians, trying to get them to remove their troops from Manchuria
+    - But by 1904, they recognized that the Russians were not going to budge and the only way to end
+      Russian influence in the area was through military action
+
+#### 3. **The Russo-Japanese War, 1904-5**
+
+- Surprise attack on Port Arthur
+  - in February 1904, Japanese launch a surprise attack on the Russian fleet in Port Arthur
+  - hailed around the world, especially in the english speaking countries, as a brilliant military
+    move
+  - soon after, troops are langded on the liaodong peninsula and take over Dalian
+  - then launch a full scale invasion of Port Arthur
+    - lost 60,000 Japanese
+- The Battles of Mukden and Tsushima
+  - Mukden was the largest land battle in history at the time
+    - after 10 days of bitter fighting, the Japanese took contorl of the city
+    - 70,000 Japanese casualties, 90,000 Russian casualties, and many more Russian soldiers taken
+      prisoner
+  - Japan was running out of resources, while Russia was able to replenish their troops
+  - after the battle of Mukden, the supreme commander of the army in Manchuria urged Yamagata to sue
+    for peace
+  - soon after, the Japanese win a decisive naval battle at Tsushima
+    - destroy the entire Russian baltic fleet
+- Japans approach the Americans as an ally
+- Russians were also weary of the domestic unrest back home (first russian revolution)
+- Portsmouth Treaty
+  - mediated by Teddy Roosevelt
+  - Japan gets the Liaodong Peninsula, the southern half of Sakhalin, and the South Manchuria Railway
+  - Japan also gets a large indemnity
+  - Japan is now seen as a major power in the world
+  - Russia is humiliated, and the Czar is forced to make concessions to the Duma
+
+#### 4. **Consequences of the War**
+
+- rising nationalism in Japan about what it achieved on the battlefield
+- The Hibiya Riots and "Imperial Democracy"
+
+  - but after learning about the terms of the treaty and that Japan had run out of money from the
+    war, the people riot
+    - leads to the destruction of 350+ buildings, mass arrests, and over 1000 casualties, including
+      many police officers
+    - leads to marshall law being declared in Tokyo
+    - Meiji leaders were getting scared of popular uprisings
+  - think of the Hibiya Riots as "imperial democracy" (a mix of a manisfestation of the popular
+    appetite for imperialist expansion and a precursor to democratization)
+
+- ultimately helped solidify the pride of the Japanese people in their country
+  - army day and navy day celebrations
+- International Consequences
+  - Tsarist Russia further destabilized
+  - Modern trench warfare—premonition to World War I
+  - W.E.B. Du Bois, _"The Color Line Belts the World"_ (1906)
+
+### Key Terms:
+
+- Treaty Revision (1894)
+- The Kabo (or Gabo) Reforms
+- King Kojong
+- Queen Min
+- Trans-Siberian Railway
+- Itō Hirobumi v. Yamagata Aritomo
+- _"Exchange Manchuria for Korea"_ (_Man-Kan kōkan_)
+- The Boxer Rebellion 1900
+- Anglo-Japanese Alliance 1902
+- Portsmouth Treaty
+- South Manchuria Railway
+- Hibiya Riots
+- W.E.B. Du Bois (1868-1963)
+
+## Reactions to the Russo-Japanese War
+
+### The London Times, September 6, 1905
+
+"From the time when the 'Father of History' [Herodotus] wrote of the repulse of the Persians by the
+Greeks until now, the relations of East and West have followed, on the whole, a uniform course...
+[But] in the last nineteen months that course has been for the first time reversed. A nation of
+unmixed Asiatic blood has inflicted defeat after defeat, by sea and by land, on one of the most
+powerful military Monarchies of Europe, and has forced it, at sword's point, to renounce, at least
+for years to come, the career of conquest which it has proclaimed to be its historic mission."
+
+### W.E.B. Du Bois, _"The Color Line Belts the World"_, Collier's Weekly, October 20, 1906
+
+"For the first time in a thousand years a great white nation has measured arms with a colored nation
+and been found wanting. The Russo-Japanese War has marked an epoch. The magic of the word 'white' is
+already broken, and the Color Line in civilization has been crossed in modern times as it was in the
+past. The awakening of the yellow races is certain. That the awakening of the brown and black races
+will follow in time, no unprejudiced student of history can doubt. Shall the awakening of these
+sleepy millions be in accordance with, and aided by, the great ideals of white civilization, or in
+spite of them and against them? This is the problem of the Color Line."
