--- a/12-05-24.md
+++ b/12-05-24.md
@@ -3,12 +3,114 @@
 [//]: <> (use `gqap` to force wrap text)
 [//]: <> (use `:noa w` to save without autoformatting)
 
-# Lecture 24 - December 5, 2024 -
+# Lecture 24 - December 5, 2024 - The End of an Era and the Legacies of Meiji
 
 ## Lecture Outline
 
-###
+#### 1. The Rise of Katsura Tarō
 
-#### 1.
+- Prestige of the military in the wake of the Sino-Japanese and Russo-Japanese Wars
+  - prestiges reaches an all time high, impact all aspects of society, including high politics
+- Katsura’s rise to the prime ministership
+  - Katsura Taro (1847-1913; Chōshū)
+  - enters into political life in 1898, serving in Hirobumi's cabinet
+  - trained in germany, military general
+  - dominates the political life in the first decade of the 20th century
+- Continuation of the conservative reaction of the 1890s
+  - under him, the more progressive trends of the meiji period continue in full swing, but he was a
+    relatively conservative figure
+  - after the Russo-Japanese War, the position of dominance in Korea is formalized via the
+- Emperor-centered ideology
 
-### Key Terms
+#### 2. The Annexation of Korea
+
+- Korean-Japanese Convention 1905
+- Itō Hirobumi as Resident General 1906-1909
+  - Ito Hirobumi (awarded honorary degree from Yale) is asked to go to Korea to handle that problem
+  - believed that Korea should still maintain some level of independence so that the reforms needed
+    to bring Korea into the modern world were accepted by the Korean people
+  - tried to play the friendly grandfather role (remember picture of Ito and Yi Eun, the crown
+    prince of Korea)
+  - many Koreas were not thrilled about this power relationship
+  - resigns in 1909
+- Itō’s Assassination by An Chung-gun 1909
+  - but by that point, he was already the face of the most agrressive aspects of Japanese
+    imperialism in Korea, so soon after, An Chung-gun (Korean) assassinates him while Ito was giving a
+    speech in manchuria
+  - An Chung-gun is a hero in Korea (stamp, museum, etc)
+- Annexation of Korea 1910
+  - by the end of August 1910, Japanese establish an underclared state of marshall law, increase
+    their military presense, and place a puppet government in place
+  - marks the end of the Korean Kingdom, and the beginning of the Japanese colonial period (for ~3
+    decades until the end of WWII)
+- now Japan was a colonial power, emulating its western fellow empires
+  - this fueled the rise of Japanese nationalism, and the Meiji emperor is seen as having made this
+    possible
+    - he is exalted as a savior of the nation, and underlying that were the older nativist ideas
+      that the imperial family decended from the gods and the emperor was this semi-divine figure
+
+#### 3. The Great Treason Incident
+
+- The rise of socialist, anarchist, and communist groups
+  - rise of small groups of believers in Japan
+  - saw themselves as heirs to the most radical traditions of the movement for freedom and popular
+    rights
+  - the new movement, like the earlier movement for freedom and popular rights, was noted for
+    including many women
+    - one of the most controversial was Kanno Suga (1881-1911)
+      - from a downwardly mobile family
+      - when she was 15, her stepmother arranged for her to be raped to be "put in her place"
+      - one of the soures of solice was in the writing of a socialist writer (who also wrote to rape
+        victims to tell them not to blame themselves or feel shame/guilt for what happened to them)
+      - joined the Heiminsha (Commoner's Society)
+    - Kotoku Shusui (1871-1911) (Tosa; student of Nakae Chomin’s)
+      - also a member of the Heiminsha
+      - was a journalist, and was arrested for his writings
+    - Heiminsha was targeted as a group by the Japanese government
+      - anti-war, pro-peace
+    - Kanno Suga becomes convinced that the only way to change the system was to kill the emperor
+      - caught in a plot to kill the emperor with a bomb (Great Treason Incident)
+      - in the end, her and her co-conspirators were betrayed to the police
+      - used by the Meiji government to round up everyone involved with the socialist movement,
+        including Kotoku Shusui
+    - Okabe Nagamoto (1855-1925) (Minister of Justice) (Yale Association of Japan President)
+      - originally born the daimyo of a domain
+      - presided over the show trial of the conspirators
+      - of the 24, 11 were executed on january 11, 1911, and one day later, Kanno Suga was executed
+      - the 10 others were sentenced to death, but commuted to life in prison by the emperor
+
+#### 4. The Death of the Meiji Emperor
+
+- The Emperor’s death as a “symbolic crisis”
+  - but two years later, the emperor was on the verge of death
+  - remember, it was for him that so many Japanese men had gone to war
+  - Meiji leaders were worried that the emperor's death would lead to the crisis that Kanno Suga had
+    tried to create
+  - as a response, they very quickly prepare for an elaborate funeral
+- Tradition and the funeral of the Meiji Emperor
+  - to remind the Japanese people of the illustrious past of the imperial family and the unbroken
+    chain of emperors for the past 2500 years
+- Nogi Maresuke follows his lord to the grave
+
+#### 5. After Meiji?
+
+- Progressive trends in the 1920s
+- Crisis of the 1930s and the Road to War (Second Restoration)
+- Abe Shinzō and the Ghosts of Meiji Today
+
+## Key Terms:
+
+- **Katsura Tarō** (1847-1913; Chōshū) (Prime minister from 1901-5, 1908-11, 1912-13)
+- **Korean-Japanese Convention 1905**
+- **Itō Hirobumi** — as Resident General in Korea, 1906-1909
+- **An Chung-gun** (1879-1910)
+- **Annexation of Korea 1910**
+- **Kanno Suga** (1881-1911)
+- **Kōtoku Shūsui** (1871-1911) (Tosa; student of Nakae Chōmin’s)
+- **The Great Treason Incident**
+- **Okabe Nagamoto** (1855-1925) (Minister of Justice) (Yale Association of Japan President)
+- **Death of the Meiji Emperor 1912**
+- **Nogi Maresuke** (Chōshū) (1849-1912)
+- **Abe Shinzō** (1954-2022) (Prime Minister 2006-7, 2012-2020) Another Chōshū man... and another assassination
+- **Japan Ishin Society (Ishin no kai)** — Ishin means “Restoration” (Meiji Ishin = Meiji Restoration)
+- **Reiwa Shinsengumi** — New leftist political party named after a group of swashbuckling Bakufu swordsmen (the Shinsengumi) from the end of the Tokugawa period
